# img_downloader

./: .gitignore  LICENSE  README.md  pyproject.toml
src/img_downloader/: __init__.py  cli.py  config.py  downloader.py  link_parser.py  logging_utils.py  utils.py
tests/: test_link_parser.py
